image blurry issue solve

--- a/assets/mobile_cart.css
+++ b/assets/mobile_cart.css
@@ -432,6 +432,7 @@
    }
    .box-summary .freeTurkey .variant-title{
        font-size: 11px;
+       font-weight: 500;
    }
   .box-summary .box-giftproduct_mobile,
   .box-summary .freeTurkey,
